force-app/main/default/objects/ComplianceRecord__mdt/ComplianceRecord__mdt.object-meta.xml
<CustomObject>
    <description>To store all the Compliance Records to be created</description>
    <label>Compliance Record</label>
    <pluralLabel>Compliance Records</pluralLabel>
</CustomObject>