force-app/main/default/objects/ComplianceRecord__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>Question/Label for the Compliance Record</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>