force-app/main/default/objects/ComplianceRecord__mdt/fields/RecType__c.field-meta.xml
<CustomField>
    <fullName>RecType__c</fullName>
    <label>RecType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction checklist</fullName>
                <default>true</default>
                <label>Transaction checklist</label>
            </value>
            <value>
                <fullName>Client Risk Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>