force-app/main/default/objects/ComplianceRecord__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Geography</fullName>
                <default>true</default>
                <label>Client Geography</label>
            </value>
            <value>
                <fullName>Client Characteristics</fullName>
            </value>
            <value>
                <fullName>Occupation/Industry</fullName>
            </value>
            <value>
                <fullName>Single High-Risk Factors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>